2014-04-24  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: The error of compiling mlimgloader/none.c is fixed.

2014-04-23  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c:
	  - Mono spacing is always forced on xft unless use_variable_column_width
	    is true.
	  - ":Percentage" after font names in ~/.mlterm/aafont works on cairo.

2014-04-22  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, etc/termcap: The default output string of XK_BackSpace is
	  changed from '\x07' to '\x7f'.

	* x_font_ft.c: Processing proportional fonts on cairo is improved.

	* mlimgloader/none.c: Minor fixes.

2014-04-22  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c, xlib/x_display.c: Pending events in the event queue
	  is read before select().

2014-04-17  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: Minor fixes.

2014-04-14  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: Hack for unexpected behavior of GDI+ in reading animation
	  GIF frames is improved.

2014-04-13  Araki Ken  <arakiken@users.sf.net>

	* gdiplus.cpp, c_anim.gif: Hack for unexpected behavior of GDI+ in reading
	  animation GIF frames is added.

	* x_picture.c, c_imagelib.c: Minor fixes.

2014-04-12  Araki Ken  <arakiken@users.sf.net>

	* c_anim.gif, c_imagelib.c: If gdk_pixbuf_new_from() reads a GIF
	  Animation frame whose width and height are smaller than those of the
	  first frame, it resizes appropriately. (gdk_pixbuf_new_from_file()
	  ignores the logical width and height in the GIF header.)

	* x_picture.c: If it fails to load an animation gif frame, skip it.

2014-04-11  Araki Ken  <arakiken@users.sf.net>

	* x_display.c, MLActivity.java, c_animgif.c, c_imagelib.c, gdiplus.cpp,
	  x_picture.c: ~/.mlterm/anim.gif => ~/.mlterm/anim%d.gif to support
	  asynchronous loading.

2014-04-10  Araki Ken  <arakiken@users.sf.net>

	* x_picture.[ch]: It is possible to load GIF files asynchronously.

	* MLActivity.java: Minor fixes.

2014-04-09  Araki Ken  <arakiken@users.sf.net>
